[gd_scene load_steps=10 format=3 uid="uid://cktub700ey4n4"]

[ext_resource type="Theme" uid="uid://127x51vxrs1c" path="res://dialogue theme/DIALOGUE.tres" id="1_v6amk"]
[ext_resource type="FontFile" uid="uid://rlvigb2lu0t4" path="res://ASSETS/collingar-font/Collingardemo-eZ3Op.otf" id="2_2x5cq"]
[ext_resource type="Script" uid="uid://c5327wouye4f2" path="res://dialogue_ui.gd" id="2_v6amk"]
[ext_resource type="PackedScene" uid="uid://b7twmnxrijp00" path="res://script/button.tscn" id="3_i1myr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pbsj4"]
content_margin_left = 30.0
content_margin_top = 30.0
content_margin_right = 30.0
content_margin_bottom = 30.0
bg_color = Color(0, 0, 0, 0.505882)
border_width_top = 28
border_color = Color(0.321569, 0, 0, 0.776471)
border_blend = true
corner_radius_bottom_right = 23
corner_radius_bottom_left = 23

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i1myr"]
bg_color = Color(0.44, 0, 0, 1)

[sub_resource type="Theme" id="Theme_njptv"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_pbsj4")
RichTextLabel/font_sizes/normal_font_size = 30
RichTextLabel/fonts/normal_font = ExtResource("2_2x5cq")
RichTextLabel/styles/background = SubResource("StyleBoxFlat_i1myr")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_njptv"]
bg_color = Color(0.32, 0, 0, 0.776471)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_detail = 10

[sub_resource type="LabelSettings" id="LabelSettings_v6amk"]
font = ExtResource("2_2x5cq")
font_size = 37
shadow_size = 13
shadow_color = Color(0, 0, 0, 0.835294)

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_v6amk")
script = ExtResource("2_v6amk")

[node name="ChoicesContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -315.0
offset_top = -28.0
offset_right = 315.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Button" parent="ChoicesContainer" instance=ExtResource("3_i1myr")]
visible = false
layout_mode = 2

[node name="DialogueBox" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 185)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -263.0
offset_right = -15.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_njptv")

[node name="DialogueLine" type="RichTextLabel" parent="DialogueBox"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_v6amk")
theme_override_font_sizes/bold_italics_font_size = 17
bbcode_enabled = true
text = "HI"
horizontal_alignment = 1

[node name="SpeakerBox" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(171.495, 60)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -344.0
offset_right = -15.0
offset_bottom = -258.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_njptv")

[node name="SpeakerName" type="Label" parent="SpeakerBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "???"
label_settings = SubResource("LabelSettings_v6amk")
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 18
visible_ratio = 6.0

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Polygon2D" type="Polygon2D" parent="Control"]
position = Vector2(-18, -7)
scale = Vector2(0.65, 0.644444)
color = Color(0.321569, 0, 0, 0.776471)
polygon = PackedVector2Array(0, 0, 40, 23, 0, 45)
